tests/fixtures/positive/naming/VariableMaxLength.kt
package naming

fun example() {
    val thisIsAnExtremelyLongVariableNameThatExceedsTheSixtyFourCharacterLimit = 42
}
