tests/fixtures/negative/testing-quality/MixedAssertionLibraries.kt
package test

import com.google.common.truth.Truth.assertThat

fun testCompute() {
    val actual = compute()
    assertThat(actual).isEqualTo(42)
}
